kubernetes/main/apps/monitoring/thanos/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: thanos
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: thanos
  ingress:
    # Allow thanos components to connect to each other
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: thanos
      toPorts:
        - ports:
            - port: "10901"
              protocol: TCP
            - port: "10902"
              protocol: TCP
  egress:
    # Allow thanos components to connect to each other
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: thanos
      toPorts:
        - ports:
            - port: "10901"
              protocol: TCP
            - port: "10902"
              protocol: TCP
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: thanos-query
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: thanos
      app.kubernetes.io/component: query
  egress:
    # Allow thanos query component to connect to Prometheus
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
            app.kubernetes.io/instance: kube-prometheus-stack
      toPorts:
        - ports:
            - port: "10901"
              protocol: TCP
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: thanos-query-frontend
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: thanos
      app.kubernetes.io/component: query-frontend
  ingress:
    - fromEndpoints:
        # Allow Grafana
        - matchLabels:
            app.kubernetes.io/name: grafana
        # Allow Kromgo
        - matchLabels:
            app.kubernetes.io/name: kromgo
      toPorts:
        - ports:
            - port: "10902"
              protocol: TCP
